# efficientnet-from-scratch

./: .gitignore  CMakeLists.txt  Makefile  Makefile.backup  README.md  activation.cpp  activation.h  conv.cpp  conv.h  efficientnet-lite0.cpp  helper.js  helper.py  label.txt  utils.cpp  utils.h  weights.txt
